# rs-basic

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  cargo.sh  cargo_crate.sh  for_each_crate.sh  for_each_crate_cargo.sh
.gitea/workflows/: cargo.yaml
.github/workflows/: cargo.yaml
crates/arithmetics/src/: main.rs
crates/clap-repl-demo/: Cargo.toml
crates/clap-repl-demo/src/: main.rs
crates/claptest/: Cargo.toml
crates/cucumber-demo/: Cargo.toml
crates/cucumber-demo/src/: lib.rs
crates/cucumber-demo/tests/: example.rs
crates/diesel-demo/: Cargo.toml
crates/diesel-demo/migrations/2024-06-27-090844_create_table/: up.sql
crates/diesel-demo/src/: cli.rs  lib.rs
crates/fluent-demo/: Cargo.toml
crates/fluent-demo/src/: main.rs
crates/future_stream/src/: main.rs
crates/graph/: Cargo.toml
crates/graph/src/: main.rs
crates/iter-prod/: Cargo.toml
crates/matchmatchmatch/: Cargo.toml
crates/matchmatchmatch/src/: main.rs
crates/mpsc/: Cargo.toml
crates/mpsc-full/src/: main.rs
crates/onlytoken/src/: main.rs
crates/panic-calm/: Cargo.toml
crates/panic-calm/src/: main.rs
crates/pest-demo/src/: csv.pest
crates/ptlog/src/: main.rs
crates/rest-queued/: Cargo.toml
crates/rest-queued/src/: client.rs  main.rs  store.rs
crates/rest/src/: main.rs  store.rs
crates/revsqrt/: Cargo.toml
crates/revsqrt/src/: lib.rs
crates/revsqrt/tests/: revsqrt-demo.rs
crates/rfd-demo/: Cargo.toml
crates/socker/src/: main.rs  pool.rs
crates/sqlite-demo/src/: main.rs
crates/statusline/src/: main.rs
crates/tokio-send-sync/src/: main.rs
members/bench-criterion/: Cargo.toml
members/bench-criterion/src/: main.rs
members/c-bindings/: Cargo.toml
members/c-bindings/lib/: CMakeLists.txt  Makefile  test.c  test.h
members/c-bindings/src/: build.rs  main.rs
members/clap-repl-demo/src/: main.rs
members/claptest/src/: main.rs
members/criterion-demo/: Cargo.toml
members/criterion-demo/benches/: my_benchmark.rs
members/criterion_ex/: Cargo.toml
members/criterion_ex/benches/: my_benchmark.rs
members/cucumber-demo/: Cargo.toml
members/cucumber-demo/tests/: example.rs
members/diesel-demo/: .env  Cargo.toml  README.md  diesel.toml
members/diesel-demo/data/: dieseldemo.db
members/diesel-demo/src/: cli.rs  lib.rs  main.rs  models.rs  schema.rs
members/echargs/: Cargo.toml
members/echargs/src/: main.rs
members/egui-demo/: Cargo.toml
members/egui-demo/src/: main.rs
members/fluent-demo/src/: main.rs
members/fluent-webserv/: Cargo.toml
members/fluent-webserv/data/: de-DE.ftl  en-US.ftl
members/fluent-webserv/src/: main.rs
members/future_stream/: Cargo.toml
members/graph/: Cargo.toml
members/graph/src/: main.rs
members/iter-prod/src/: main.rs
members/matchmatchmatch/src/: main.rs
members/mpsc-full/: Cargo.toml
members/mpsc-full/src/: main.rs
members/mpsc/src/: main.rs
members/onlytoken/: Cargo.toml
members/panic-calm/src/: main.rs
members/pest-demo/: Cargo.toml
members/pest-demo/src/: main.rs
members/ptlog/: Cargo.toml
members/ptlog/src/: main.rs
members/rest/: Cargo.toml
members/rest-queued/: Cargo.toml
members/rest-queued/src/: client.rs  main.rs  routes.rs  store.rs
members/rest/src/: main.rs  routes.rs  store.rs
members/revsqrt/: Cargo.toml
members/revsqrt/benches/: rsqrt-bench.rs
members/revsqrt/src/: lib.rs  main.rs
members/revsqrt/tests/: basic-revsqrt.rs  revsqrt.rs
members/revsqrt/tests/features/book/: revsqrt-demo.feature  revsqrt.feature
members/rfd-demo/src/: main.rs
members/sdl-idiot/: Cargo.toml
members/serde-json-demo/: Cargo.toml
members/serde-json-demo/src/: main.rs
members/shortc/: Cargo.toml
members/shortc/src/: main.rs
members/slog-demo/: Cargo.toml
members/socker/: Cargo.toml
members/socker/src/: main.rs  pool.rs
members/sqlite-demo/: Cargo.toml  cats.db
members/sqlite-demo/src/: db.rs  main.rs
members/statusline/: Cargo.toml
members/tokio-send-sync/: Cargo.toml
members/tokio-send-sync/src/: main.rs
members/tokryon/: Cargo.toml
members/tokryon/src/: main.rs
members/tpdemo/: Cargo.toml
members/tpdemo/src/: main.rs
src/: main.rs
