[workspace]
members = [
  ".",
  "members/criterion-demo",
  "members/cucumber-demo",
  "members/panic-calm",
  "members/pest-demo",
  "members/revsqrt",
  "members/serde-json-demo",
  "members/shortc",
  "members/slog-demo",
  "members/socker",
  "members/tokryon",
  "members/tokio-send-sync",
  "members/matchmatchmatch",
  "members/future_stream",
]
default-members = [
  ".",
  "members/revsqrt",
  "members/criterion-demo",
  "members/shortc",
  "members/pest-demo",
  "members/serde-json-demo",
  "members/slog-demo",
  "members/cucumber-demo",
  "members/panic-calm",
  "members/socker",
  "members/tokryon",
  "members/tokio-send-sync",
  "members/matchmatchmatch",
  "members/future_stream",
]

[workspace.dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = [
  "net",
  "rt",
  "macros",
  "rt-multi-thread",
  "io-util",
  "time",
  "sync",
] }
futures = { version = "0.3.30", features = ["executor"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"

[package]
name = "rs-basic"
version = "0.2.1"
edition = "2021"
authors = ["Christoph J. Scherr <softwar@cscherr.de>"]
publish = false
autobins = true
default-run = "rs-basic"
