[workspace]
members = [
	".",
	"members/criterion-demo",
	"members/cucumber-demo",
	"members/panic-calm",
	"members/pest-demo",
	"members/revsqrt",
	"members/serde-json-demo",
	"members/shortc",
	"members/socker",
	"members/tokryon",
	"members/tokio-send-sync",
	"members/matchmatchmatch",
	"members/future_stream",
	"members/mpsc",
	"members/mpsc-full",
	"members/echargs",
	"members/claptest",
	"members/rest",
	"members/rest-queued",
	"members/fluent-demo",
	"members/onlytoken",
	"members/sqlite-demo",
	"members/diesel-demo",
	"members/ptlog",
	"members/hello-world",
	"members/statusline",
	"members/clap-repl-demo",
	"members/arithmetics",
	"members/egui-demo",
	"members/rfd-demo",
	"members/graph",
]
default-members = [
	".",
	"members/graph",
	"members/rfd-demo",
	"members/egui-demo",
	"members/arithmetics",
	"members/statusline",
	"members/ptlog",
	"members/diesel-demo",
	"members/onlytoken",
	"members/fluent-demo",
	"members/echargs",
	"members/revsqrt",
	"members/claptest",
	"members/mpsc",
	"members/mpsc-full",
	"members/criterion-demo",
	"members/shortc",
	"members/pest-demo",
	"members/serde-json-demo",
	"members/cucumber-demo",
	"members/panic-calm",
	"members/socker",
	"members/tokryon",
	"members/tokio-send-sync",
	"members/matchmatchmatch",
	"members/future_stream",
	"members/rest",
	"members/rest-queued",
	"members/sqlite-demo",
]

[workspace.dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = [
	"net",
	"rt",
	"macros",
	"rt-multi-thread",
	"io-util",
	"time",
	"sync",
] }
futures = { version = "0.3.30", features = ["executor"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
libpt = { version = "0.5.1", features = ["full"] }

[package]
name = "rs-basic"
version = "0.2.1"
edition = "2021"
authors = ["Christoph J. Scherr <softwar@cscherr.de>"]
publish = false
autobins = true
default-run = "rs-basic"
