[workspace]
members = [
	".",
	"crates/criterion-demo",
	"crates/cucumber-demo",
	"crates/panic-calm",
	"crates/pest-demo",
	"crates/revsqrt",
	"crates/serde-json-demo",
	"crates/shortc",
	"crates/socker",
	"crates/tokryon",
	"crates/tokio-send-sync",
	"crates/matchmatchmatch",
	"crates/future_stream",
	"crates/mpsc",
	"crates/mpsc-full",
	"crates/echargs",
	"crates/claptest",
	"crates/rest",
	"crates/rest-queued",
	"crates/fluent-demo",
	"crates/onlytoken",
	"crates/sqlite-demo",
	"crates/diesel-demo",
	"crates/ptlog",
	"crates/hello-world",
	"crates/statusline",
	"crates/clap-repl-demo",
	"crates/arithmetics",
	"crates/egui-demo",
	"crates/rfd-demo",
	"crates/iter-prod",
	"crates/tpdemo",
	"crates/graph",
	"crates/sdl-idiot",
]
default-members = ["."]

[workspace.dependencies]
anyhow = "1.0.79"
thiserror = "1.0.56"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
libpt = { version = "0.5.1", features = ["full"] }

[package]
name = "rs-basic"
version = "0.2.1"
edition = "2021"
authors = ["Christoph J. Scherr <softwar@cscherr.de>"]
publish = false
autobins = true
default-run = "rs-basic"
