[package]
name = "revsqrt"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"
futures = "0.3.30"
cucumber = "0.20.2"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }
rand = "0.8.5"

[[bench]]
name = "rsqrt-bench"
harness = false      # disable standard harness

[lib]
name = "revsqrt"
path = "src/lib.rs"

[[bin]]
name = "revsqrt"
path = "src/main.rs"

[[test]]
name = "revsqrt"
harness = false  # allows Cucumber to print output instead of libtest

[[test]]
name = "revsqrt-demo"
harness = false       # allows Cucumber to print output instead of libtest

[[test]]
name = "basic-revsqrt"
harness = true
