[package]
name = "rest-queued"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
libpt.workspace = true
rand = { version = "0.8.5", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
warp = "0.3.6"
