[package]
name = "serde-json-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono = { version = "0.4.26", features = ["serde"] }
serde_json.workspace = true
serde.workspace = true
serde_repr = "0.1.18"
