[package]
name = "tokryon"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
rayon = "1.8.1"
tokio = { version = "1.35.1", features = ["rt", "macros", "sync", "time", "rt-multi-thread"] }
